<resources>
    <string name="app_name">PhysioTracker</string>
    <string name="title_home">Home</string>
    <string name="title_edit_exercise">Edit Exercise</string>
    <string name="title_view_exercise">My Exercise</string>
    <string name="title_exercise_tracker">Tracker</string>
    <string name="title_event_logs">Logs</string>
    <string name="title_settings">Settings</string>
    <string name="title_developer">Developer</string>
    <string name="txt_add_new_exercise">Add new exercise</string>
    <string name="txt_finish_session">Finish session</string>
    <string name="txt_pause_session">Pause session</string>
    <string name="txt_reset_session">Reset session</string>
    <string name="header_exercises">My Exercises</string>
    <string name="header_settings">Settings</string>

    <string name="lbl_watch_video">Watch Video</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_archive">Archive</string>
    <string name="lbl_unarchive">Unarchive</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_cancel_exercise">Cancel</string>
    <string name="lbl_finish_exercise">Finish</string>
    <string name="lbl_start_exercise">Start</string>
    <string name="str_select_exercise_hint">Select your next exercise from below to get started.</string>
    <string name="lbl_stopwatch_notification">Stopwatch Notification</string>
    <string name="lbl_workout_stopwatch_notification">Workout Stopwatch Notification</string>
    <string name="lbl_break_stopwatch_notification">Break Stopwatch Notification</string>
    <string name="lbl_timer_notification_hint">Please enter <b>both</b> the delay time (in minute) and the corresponding message for each notification. Leave the fields empty if you do not wish to receive additional notifications.</string>
    <string name="edt_notif_delay_hint">Delay (min)</string>
    <string name="edt_notif_msg_hint">Notification Message</string>
    <string name="empty_exercise_list_msg">You don\'t have any exercises recorded. Get started by adding exercises using the button at the top.</string>
    <string name="empty_archived_exercise_list_msg">You have no archived exercises.</string>
    <string name="empty_event_list_msg">You don\'t have any events recorded. Get started by adding events using the button at the top.</string>
    <string name="empty_archived_event_list_msg">You have no archived events.</string>
    <string name="lbl_load_default_data">Load Test Data</string>
    <string name="lbl_clear_data">Clear Data</string>
    <string name="lbl_load_without_reset_settings">Load Test Data without Resetting Settings</string>
    <string name="lbl_clear_without_reset_settings">Clear Data without Resetting Settings</string>
    <string name="lbl_play_sound">Play 🔊</string>
    <string name="lbl_event_exercise">Exercise</string>
    <string name="lbl_event_active">Sport or Gym</string>
    <string name="lbl_event_pain">Pain or Discomfort</string>
    <string name="title_duplicate_event">Duplicate event</string>
    <string name="title_archive_event">Archive event</string>
    <string name="title_archive_event_before_date">Archive all events before </string>
    <string name="title_unarchive_event">Unarchive event</string>
    <string name="title_archive_events_before_start_time">Archive all previous events</string>
    <string name="title_archive_events_without_start_time">Archive events with earlier modification dates</string>
    <string name="title_mark_as_important">Mark as important</string>
    <string name="title_unmark_as_important">Mark as not important</string>
    <string name="title_extend_end_date">Extend end date to current time</string>
    <string name="title_delete_event">Delete event</string>
    <string name="lbl_filter_important">Important</string>
    <string name="lbl_filter_pain_discomfort">Pain or Discomfort</string>
    <string-array name="units">
        <item>s</item>
        <item>min</item>
    </string-array>
</resources>