<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/markImportantEvent"
        android:title="@string/title_mark_as_important" />

    <item
        android:id="@+id/unmarkImportantEvent"
        android:title="@string/title_unmark_as_important" />

    <item
        android:id="@+id/extendEndDate"
        android:title="@string/title_extend_end_date" />

    <item
        android:id="@+id/duplicateEvent"
        android:title="@string/title_duplicate_event" />

    <item
        android:id="@+id/archiveEvent"
        android:title="@string/title_archive_event" />

    <item
        android:id="@+id/archivePreviousEvents"
        android:title="@string/title_archive_events_before_start_time" />

    <item
        android:id="@+id/archivePreviousEventsWithoutStartTime"
        android:title="@string/title_archive_events_without_start_time" />

    <item
        android:id="@+id/unarchiveEvent"
        android:title="@string/title_unarchive_event" />

    <item
        android:id="@+id/deleteEvent"
        android:title="@string/title_delete_event" />


</menu>