<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_exercise_tracker"
        android:icon="@drawable/ic_timer"
        android:title="@string/title_exercise_tracker" />

    <item
        android:id="@+id/navigation_event_logs"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_event_logs" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />
<!--    <item-->
<!--    android:id="@+id/navigation_developer"-->
<!--    android:icon="@drawable/ic_code"-->
<!--    android:title="@string/title_developer" />-->


</menu>