<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.developer.DeveloperFragment"
    android:paddingTop="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnDeveloperLoadTestData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/lbl_load_default_data" />

        <Button
            android:id="@+id/btnDeveloperClearData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/lbl_clear_data" />

        <Button
            android:id="@+id/btnDeveloperLoadTestDataWithoutClearingSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/lbl_load_without_reset_settings" />

        <Button
            android:id="@+id/btnDeveloperClearDataWithoutClearingSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/lbl_clear_without_reset_settings" />
    </LinearLayout>
</ScrollView>