<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp">
        <TextView
            android:id="@+id/txtSettingsHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_settings"
            android:textSize="20sp"
            android:textStyle="bold" />
<!--    <androidx.cardview.widget.CardView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->
        <LinearLayout
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/lbl_stopwatch_notification"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/switchStopwatchNotification"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <Switch
                    android:id="@+id/switchStopwatchNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:text="@string/lbl_timer_notification_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


<!-- Workout timer -->
            <TextView
                android:layout_marginTop="24dp"
                android:text="@string/lbl_workout_stopwatch_notification"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Notification 1" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_workout_delay_1"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/edt_notif_delay_hint"
                    android:inputType="number"
                    android:background="@drawable/shp_edit_text_background"
                    android:maxLength="2"
                    android:padding="10dp"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/edt_workout_msg_1"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edt_notif_msg_hint"
                    android:background="@drawable/shp_edit_text_background"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:textSize="12sp"/>
            </LinearLayout>



            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Notification 2" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_workout_delay_2"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:background="@drawable/shp_edit_text_background"
                    android:maxLength="2"
                    android:padding="10dp"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/edt_workout_msg_2"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shp_edit_text_background"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:textSize="12sp"/>
            </LinearLayout>



            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Notification 3" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_workout_delay_3"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:background="@drawable/shp_edit_text_background"
                    android:maxLength="2"
                    android:padding="10dp"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/edt_workout_msg_3"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shp_edit_text_background"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:textSize="12sp"/>
            </LinearLayout>





<!-- Break timer -->
            <TextView
                android:layout_marginTop="24dp"
                android:text="@string/lbl_break_stopwatch_notification"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Notification 1" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_break_delay_1"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/edt_notif_delay_hint"
                    android:inputType="number"
                    android:background="@drawable/shp_edit_text_background"
                    android:maxLength="2"
                    android:padding="10dp"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/edt_break_msg_1"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edt_notif_msg_hint"
                    android:background="@drawable/shp_edit_text_background"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:textSize="12sp"/>
            </LinearLayout>



            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Notification 2" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_break_delay_2"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:background="@drawable/shp_edit_text_background"
                    android:maxLength="2"
                    android:padding="10dp"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/edt_break_msg_2"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shp_edit_text_background"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:textSize="12sp"/>
            </LinearLayout>



            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Notification 3" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_break_delay_3"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:background="@drawable/shp_edit_text_background"
                    android:maxLength="2"
                    android:padding="10dp"
                    android:textSize="12sp"/>
                <EditText
                    android:id="@+id/edt_break_msg_3"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shp_edit_text_background"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
<!--    </androidx.cardview.widget.CardView>-->
<!--    </ScrollView>-->
</ScrollView>