<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.eventlogs.EditEventFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Details *" />

            <EditText
                android:id="@+id/edtEventDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shp_edit_text_background"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxLength="200"
                android:maxLines="8"
                android:minLines="5"
                android:padding="10dp"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Start Date" />
                    <TextView
                        android:id="@+id/txtSelectedStartDate"
                        android:text="Start date not selected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/invisibleStartDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:text="0"/>
                    <ImageButton
                        android:id="@+id/btnSelectStartDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shp_img_btn_background"
                        android:backgroundTint="?attr/colorPrimary"
                        android:contentDescription="Select start time"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="3dp"
                        app:srcCompat="@drawable/ic_calendar"
                        app:tint="?attr/colorImgBtnTint"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="End Date" />
                    <TextView
                        android:id="@+id/txtSelectedEndDate"
                        android:text="End date not selected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/invisibleEndDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:text="0"/>
                    <ImageButton
                        android:id="@+id/btnSelectEndDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shp_img_btn_background"
                        android:backgroundTint="?attr/colorPrimary"
                        android:contentDescription="Select start time"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="3dp"
                        app:srcCompat="@drawable/ic_calendar"
                        app:tint="?attr/colorImgBtnTint"/>
                </LinearLayout>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_marginTop="24dp"
                android:id="@+id/chkbxIsImportant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Important" />
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkbxIsExercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_event_exercise" />
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkbxIsActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_event_active" />
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkbxIsPainDiscomfort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_event_pain" />
            <RadioGroup
                android:id="@+id/rgChanges"
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cbsSports"
                android:layout_centerHorizontal="true"
                android:checkedButton="@+id/rdSport"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rbUnchanged"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:text="Unchanged"/>
                <RadioButton
                    android:id="@+id/rbImproved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:text="Improved"/>
                <RadioButton
                    android:id="@+id/rbWorsened"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Worsened"/>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/lbl_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>